[project]
name = "bhdup"
version = "2.0.0"
description = "Automated media uploading tool for BHD"
readme = "README.md"
license = { text = "GPL-3.0" }
requires-python = ">=3.11"
authors = [
    { name = "h1n054ur" },
]

dependencies = [
    "requests>=2.28",
    "guessit>=3.7",
    "colorama>=0.4",
    "python-dotenv>=1.0",
    "tqdm>=4.64",
    "tmdbv3api>=1.9",
    "cinemagoer>=2023.5.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[project.scripts]
bhdup = "bhdup.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
